# tabs

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  main.py  pyproject.toml
src/: entropy.py  exporter.py  fabricator.py  models.py  rasterizer.py  renderer.py
templates/bank_statements/: no_pages.html  with_pages.html
templates/invoices/: classic.html  compact.html  corporate.html  creative.html  elegant.html  grid.html  luxury.html  minimal.html  modern.html  retro.html  simple.html  tech.html  vibrant.html
templates/receipts/: cafe.html  compact.html  minimal.html  modern.html  petrol.html  pharmacy.html  premium.html  restaurant.html  supermarket.html  thermal.html
